--- a/assets/templates/template.html
+++ b/assets/templates/template.html
@@ -29,7 +29,7 @@
 
     <nav>
         <img class="logoSidebar" src="../assets/img/logoSidebar.png" alt="">
-        <div class="menuSidebar">
+        <div id="menu_Sidebar" class="menuSidebar d-none">
             <div id="frameSummary" class="menuFrames" onclick="location.href='summary.html';">
                 <div class="iconSidebar flex_center">
                     <div id="imgFrameSummary" class="imgSidebar imgSummary"></div>
@@ -56,8 +56,8 @@
             </div>
         </div>
         <div class="privacySidebar">
-            <p class="privacyColor">Privacy Policy</p>
-            <p class="privacyColor">Legal notice</p>
+            <div id="framePolicy"><p class="privacyColor padding8px60px" onclick="location.href='privacy_policy.html';">Privacy Policy</p></div>
+            <div id="frameNotice"><p class="privacyColor padding8px60px" onclick="location.href='legal_notice.html';">Legal notice</p></div>            
         </div>
     </nav>
 </body>
