--- a/css/add_task.css
+++ b/css/add_task.css
@@ -94,6 +94,48 @@ input {
     cursor: pointer;
 }
 
+.input-categorie-container {
+    position: relative;
+}
+
+#input-category {
+
+}
+
+.input-categorie-arrow-down {
+    position: absolute;
+    right: 15px;
+    top: 20px;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+}
+
+.input-categorie-arrow-down:hover {
+    border-radius: 50%;
+    background-color: rgba(0, 0, 0, 0.1);
+}
+
+#input-categorie-image-up {
+    position: absolute;
+    right: 15px;
+    top: 20px;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+}
+
+#display-categorie {
+    width: 440px;
+    height: 100px;
+    background-color: inherit;
+    border: 1px solid black;
+    border-radius: 0 0 15px 15px;
+    margin-top: -10px;
+    background-color: #FFFFFF;
+    padding: 10px;
+}
+
 #input-title {
     padding: 12px 21px;
     margin-bottom: 20px;
@@ -337,7 +379,7 @@ input {
 
 #show-contacts {
     width: 440px;
-    height: 200px;
+    height: 235px;
     overflow-y: auto;
     overflow-x: hidden;
     bottom: 58px;
@@ -407,6 +449,7 @@ input {
     background-color: yellow;
     border-radius: 50%;
     padding: 10px;
+    z-index: 10;
 }
 
 .subtask-button {
