--- a/css/add_task.css
+++ b/css/add_task.css
@@ -120,6 +120,7 @@ input {
 #display-categorie h2{
     font-size: 24px;
     padding: 5px;
+    font-weight: 400;
 }
 
 #display-categorie h2:hover {
