--- a/css/add_task.css
+++ b/css/add_task.css
@@ -92,6 +92,7 @@ input {
     height: 48px;
     padding: 12px 16px;
     cursor: pointer;
+    pointer-events: none;
 }
 
 .input-categorie-container {
