--- a/assets/templates/css/contactsEdit.css
+++ b/assets/templates/css/contactsEdit.css
@@ -173,7 +173,7 @@
 }
 
 .dotIconContainer:hover .dotIcon{
-  background-image: url(../assets/img/dotIconBlue.svg);
+  background-image: url(../../img/dotIconBlue.svg);
   border: none;
   box-shadow: 0px 4px 4px 0px #00000040;
   background-size: cover;
