--- a/assets/templates/template.html
+++ b/assets/templates/template.html
@@ -20,7 +20,7 @@
             </div>
         </div>
         <div id="headerNote" class="headerNote d-none">
-            <div class="headerNoteButton helpTemplate d-none" onclick="location.href='help.html';">Help</div>
+            <div id="headerNoteHelpTemplate" class="headerNoteButton helpTemplate" onclick="location.href='help.html';">Help</div>
             <div class="headerNoteButton" onclick="location.href='legal_notice.html';">Legal Notice</div>
             <div class="headerNoteButton" onclick="location.href='privacy_policy.html';">Privacy Policy</div>
             <div class="headerNoteButton" onclick="openIndex();">Log out</div>
