--- a/assets/templates/templates.css
+++ b/assets/templates/templates.css
@@ -291,6 +291,10 @@ p {
   background-color: rgb(42, 62, 89);
 }
 
+.helpTemplate{
+  display: none;
+}
+
 @media (min-width: 1440px) {
   header {
     width: 100vw;
@@ -343,7 +347,7 @@ p {
     flex-direction: row;
     align-items: center;
     width: 100vw;
-    padding: 0px 16px 0px 16px;
+    padding: 0px 32px 0px 16px;
   }
 
   .helpTemplate{
