--- a/css/contacts.css
+++ b/css/contacts.css
@@ -1,7 +1,7 @@
 body {
   overflow: hidden;
-  width: 1440px;
-  height: 1024px;
+  /* width: 1440px;
+  height: 1024px; */
   background-color: #f6f7f8;
   font-family: "Inter";
   box-sizing: border-box;
@@ -375,7 +375,9 @@ input[type="tel"]:focus {
   cursor: pointer;
   padding-top: 15px;
   padding-bottom: 15px;
+  padding-left: 8px;
   border-radius: 10px;
+  margin: 8px;
 }
 
 .contactListInner.active {
