--- a/assets/templates/css/contactsEdit.css
+++ b/assets/templates/css/contactsEdit.css
@@ -155,24 +155,35 @@
   border-radius: 56px;
   display: flex;
   position: absolute;
-  bottom: 25vh;
-  right: 8vw;
+  /* bottom: 25vh;
+  right: 8vw; */
   align-items: center;
   justify-content: center;
+  z-index: 2;
+  bottom: 90px;
+  right: 10px;
 }
 
 .dotIcon {
   cursor: pointer;
-  top: 758px;
+  /* top: 758px; */
   border-radius: 56px;
   display: flex;
-  left: calc((100vw - 56px) / 2);
+  /* left: calc((100vw - 56px) / 2); */
   position: absolute;
-  bottom: 25vh;
-  right: 8vw;
+  /* bottom: 25vh;
+  right: 8vw; */
 }
 
-.dotIconContainer:hover .dotIcon{
+/* .dotIconContainer:hover .dotIcon{
+  background-image: url(../../img/dotIconBlue.svg);
+  border: none;
+  box-shadow: 0px 4px 4px 0px #00000040;
+  background-size: cover;
+  background-position: center;
+} */
+
+.dotIconContainer:hover{
   background-image: url(../../img/dotIconBlue.svg);
   border: none;
   box-shadow: 0px 4px 4px 0px #00000040;
