--- a/css/add-task-board.css
+++ b/css/add-task-board.css
@@ -29,15 +29,28 @@
 
 .headline {
     font-size: 40px;
+    position: absolute;
+    top: 20px;
+    left: 20px;
 }
 
-.container {
+.container-board {
     position: absolute;
-    top: 25%;
-    right: 5%;
+    top: 12%;
+    right: 10%;
     border-radius: 15px;
     border: 1px solid black;
     background-color: #f6f7f8;
+    width: 1000px;
+    height: 700px;
+}
+
+#close-button {
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    font-size: 20px;
+    cursor: pointer;
 }
 
 input {
@@ -46,7 +59,7 @@ input {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
     font-size: 20px;
-    padding: 9px 8px;
+    padding: 20px 8px;
 }
 
 #content {
@@ -68,6 +81,10 @@ input {
     height: 222px;
 }
 
+#input-title {
+    line-height: 24px;
+}
+
 #input-description-board {
     padding: 9px 8px;
     max-width: 440px;
@@ -76,13 +93,14 @@ input {
     min-height: 150px;
     border-radius: 10px;
     border: 1px solid #D1D1D1;
+    font-size: 20px;
 }
 
 #input-assigned-board,
 #input-categorie-board {
     width: 440px;
     height: 24px;
-    padding: 12px 16px;
+    padding: 20px 16px;
     cursor: pointer;
     pointer-events: none;
 }
@@ -94,7 +112,7 @@ input {
 .input-categorie-arrow-down-board {
     position: absolute;
     right: 15px;
-    top: 9px;
+    top: 15px;
     width: 10px;
     height: 10px;
     cursor: pointer;
@@ -109,6 +127,54 @@ input {
 .input-prio-board {
     display: flex;
     justify-content: space-around;
+}
+
+#input-prio1-board {
+    background-image: url(../assets/img/urgent_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio1-board:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
+#input-prio2-board {
+    background-image: url(../assets/img/medium_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio2-board:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
+}
+
+#input-prio3-board {
+    background-image: url(../assets/img/low_button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 136px;
+    height: 56px;
+    cursor: pointer;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+    border-radius: 10px;
+}
+
+#input-prio3-board:hover {
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0);
+    border-radius: 10px;
 }
 
 footer {
