--- a/css/board.css
+++ b/css/board.css
@@ -65,6 +65,7 @@
     flex-direction: row;
     justify-content: space-between;
     border: 0;
+    align-items: center;
 }
 
 .inputSearch{
@@ -76,6 +77,7 @@
     font-size: 20px;
     line-height: 24px;
     outline: none;
+    height: 40px;
 }
 
 .borderBlue{
@@ -830,6 +832,21 @@ input::placeholder{
     }
 }
 
+@media (min-width: 1201px)
+{
+    #searchMobil{
+        display: none;
+    }
+
+    #addTaskMobil{
+        display: none;
+    }
+
+    .mobilBoardTaskTitles{
+        display: none;
+    }
+}
+
 @media (max-width: 1200px){
 
     .contentFrame{
@@ -906,7 +923,7 @@ input::placeholder{
     .mobilBoardTaskTitles{
         display: flex !important;
         padding-left: 16px;
-        width: 396px;
+        /* width: 396px; */
     }
 }
 
