--- a/css/add_task.css
+++ b/css/add_task.css
@@ -18,6 +18,11 @@ html {
     margin-bottom: 40px;
 }
 
+.head-addTask {
+    padding-top: 64px;
+    padding-left: 74px;
+}
+
 body {
     max-width: 1440px;
 }
@@ -59,6 +64,18 @@ body {
     height: 700px;
 }
 
+.container-board-addTask {
+    position: absolute;
+    top: 12%;
+    right: 10%;
+    width: 1116px;
+    height: 870px;
+    border-radius: 30px;
+    background-color: rgba(255, 255, 255, 1);
+    border-color: rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.1);
+}
+
 #footer-board {
     margin-top: 10px;
     display: flex;
@@ -68,6 +85,18 @@ body {
 }
 
 .h1-board {
+    width: 466px;
+    height: 78px;
+    font-family: Inter;
+    font-size: 61px;
+    font-weight: 700;
+    line-height: 73.2px;
+    text-align: left;
+    color: black;
+    margin: 0;
+}
+
+h1{
     font-size: 61px;
     margin-top: -50px;
     margin-left: 50px;
@@ -78,6 +107,17 @@ body {
     top: 30px;
     right: 30px;
     cursor: pointer;
+}
+
+#close-button-addTask {
+    position: absolute;
+    width: 32px;
+    height: 32px;
+    padding: 4px 0px 0px 0px;
+    cursor: pointer;
+    border-radius: 56px;
+    top: 64px;
+    left: 1044px;
 }
 
 .display-categorie-board {
@@ -121,6 +161,13 @@ body {
     gap: 24px;
 }
 
+#content-addTask {
+    display: flex;
+    justify-content: space-between;
+    font-size: 20px;
+    gap: 48px;
+}
+
 input {
     border: 1px solid #D1D1D1;
     border-radius: 10px;
@@ -143,10 +190,28 @@ input {
     gap: 8px;
 } */
 
+.content-left-padding{
+    margin-top: calc(174px - 141px);
+    margin-left: 74px;
+}
+
+.content-right-padding{
+    margin-top: calc(174px - 141px);
+    margin-right: 74px;
+}
+
+.content-top-padding{
+    margin-top: calc(174px - 141px);
+}
+
 #input-title,
 #input-description,
 #input-assigned {
     font-size: 20px;
+}
+
+.width440{
+    width: 440px;
 }
 
 #input-assigny,
@@ -232,6 +297,33 @@ input {
     min-width: 300px;
     max-height: 200px;
     min-height: 150px;
+}
+
+#input-description-addTask {
+    padding: 18px 16px;
+    gap: 8px;
+    /* margin-bottom: 20px; */
+    padding: 18px 16px;
+    border-radius: 10px;
+    border: 1px solid #D1D1D1;
+    max-width: 440px;
+    min-width: 300px;
+    max-height: 200px;
+    min-height: 120px;
+}
+
+.fiel-required{
+    position: absolute;
+    top: 779px;
+    left: 74px;
+}
+
+.button-footer-addTask{
+    top: 750px;
+    left: 716.25px;
+    gap: 25px;
+    position: absolute;
+    display: flex;
 }
 
 #input-assigny {
