fix display contacts on board add_task

--- a/assets/templates/css/add_task_board_mediaquerries.css
+++ b/assets/templates/css/add_task_board_mediaquerries.css
@@ -32,6 +32,14 @@
          width: 70%
      }
 
+     #show-contacts {
+        width: 100%;
+     }
+
+     .display-contacts-dropdown {
+        width: 300px;
+     }
+
      #input-assigny {
          width: 100%;
      }
