--- a/css/add_task.css
+++ b/css/add_task.css
@@ -349,7 +349,7 @@ input {
 #display-initials {
     display: grid;
     bottom: 330px;
-    z-index: -1;
+    z-index: 1;
     width: 440px;
     grid-template-columns: repeat(8, 1fr);
     grid-row-gap: 30px;
@@ -526,12 +526,12 @@ input {
     font-size: 20px;
 }
 
-.btn-footer-clear:active {
+.btn-footer-clear:hover {
     border: 1px solid #29ABE2;
     color: #29ABE2;
 }
 
-.btn:hover {
+.btn-footer-create:hover {
     border: 1px solid #29ABE2;
     background-color: #29ABE2;
 }
