add mediaquerries for add_task_board

--- a/assets/templates/css/add_task_board_mediaquerries.css
+++ b/assets/templates/css/add_task_board_mediaquerries.css
@@ -56,3 +56,16 @@
          padding-left: 30px;
      }
  }
+
+ @media(max-width: 1400px) {
+    .container-board-addTask {
+        left: 5%;
+    }
+ }
+
+@media(max-width: 1200px) {
+    .container-board-addTask {
+        width: 100%;
+        left: 0%;
+    }
+}
