--- a/css/add_task.css
+++ b/css/add_task.css
@@ -18,9 +18,11 @@ html {
     margin-bottom: 40px;
 }
 
-.head-addTask {
+.header-addTask {
     padding-top: 64px;
     padding-left: 74px;
+    display: flex;
+    justify-content: space-between;
 }
 
 body {
@@ -84,7 +86,7 @@ body {
     margin-right: 35px;
 }
 
-.h1-board {
+.headline {
     width: 466px;
     height: 78px;
     font-family: Inter;
@@ -110,14 +112,8 @@ h1{
 }
 
 #close-button-addTask {
-    position: absolute;
-    width: 32px;
-    height: 32px;
-    padding: 4px 0px 0px 0px;
     cursor: pointer;
-    border-radius: 56px;
-    top: 64px;
-    left: 1044px;
+    margin-right: 70px;
 }
 
 .display-categorie-board {
@@ -128,12 +124,8 @@ h1{
     margin-top: -5px;
     background-color: #FFFFFF;
     position: absolute;
-    bottom: 145px;
+    bottom: 304px;
     z-index: 10;
-}
-
-.input-categorie-container-board {
-    z-index: 2;
 }
 
 .show-subtask-board {
@@ -163,7 +155,6 @@ h1{
 
 #content-addTask {
     display: flex;
-    justify-content: space-between;
     font-size: 20px;
     gap: 48px;
 }
@@ -197,7 +188,6 @@ input {
 
 .content-right-padding{
     margin-top: calc(174px - 141px);
-    margin-right: 74px;
 }
 
 .content-top-padding{
@@ -313,16 +303,15 @@ input {
 }
 
 .fiel-required{
-    position: absolute;
-    top: 779px;
-    left: 74px;
+    display: flex;
+    justify-content: space-around;
+    margin-top: 150px;
 }
 
 .button-footer-addTask{
     top: 750px;
     left: 716.25px;
     gap: 25px;
-    position: absolute;
     display: flex;
 }
 
